SALG-1200: Fix color contrast

--- a/web/themes/sportsfaciliteter/css/style.css
+++ b/web/themes/sportsfaciliteter/css/style.css
@@ -5,8 +5,10 @@
 
 :root {
   /* Color variables */
-  --color-primary: #3661d8;
-  --color-primary-darker: #2b4aa0;
+  --color-primary: hsl(224, 68%, 45%);
+  --color-primary-darker: hsl(224, 68%, 30%);
+  --color-success: hsl(130, 85%, 25%);
+  --color-success-darker: hsl(130, 85%, 15%);
   --color-gray-700: #444;
   --color-gray-900: #222;
   --text-color-primary: var(--color-gray-900);
@@ -16,7 +18,6 @@
   --transition-color-out: color .4s ease-in-out;
   --transition-border-in: border .2s ease-in-out;
   --transition-border-out: border .4s ease-in-out;
-
 }
 
 /* Body */
@@ -30,6 +31,27 @@ body {
 
 .main-container {
   max-width: 1200px;
+}
+
+
+/* Brand */
+.navbar-default .navbar-brand {
+  color: var(--color-primary-darker, darkblue);
+}
+.navbar-default .navbar-brand:hover {
+  color: var(--color-primary, blue);
+}
+
+/* Buttons */
+.btn-success {
+  color: #fff;
+  background-color: var(--color-success, green);
+  border-color: var(--color-success, green);
+}
+.btn-success:hover {
+  color: #fff;
+  background-color: var(--color-success-darker, darkgreen);
+  border-color: var(--color-success-darker, darkgreen);
 }
 
 /* Navigation */
